default/objects/Karta_CCS_Bonus__c/Karta_CCS_Bonus__c.object-meta.xml
<CustomObject>
    <description>Karta CCS Bonus.</description>
    <label>Karta CCS Bonus</label>
    <nameField>
        <label>Karta CCS Bonus</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Karta CCS Bonus</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>