default/objects/Karta_CCS_Bonus__c/fields/CCS_Order__c.field-meta.xml
<CustomField>
    <fullName>CCS_Order__c</fullName>
    <label>CCS Order</label>
    <referenceTo>CCS_Order__c</referenceTo>
    <relationshipLabel>Karta CCS Bonus</relationshipLabel>
    <relationshipName>Karta_CCS_Bonus</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>