default/objects/Karta_CCS_Bonus__c/fields/Financni_naboj_karty_v_Kc__c.field-meta.xml
<CustomField>
    <fullName>Financni_naboj_karty_v_Kc__c</fullName>
    <description>Finanční náboj karty v Kč.</description>
    <inlineHelpText>Finanční náboj karty v Kč.</inlineHelpText>
    <label>Finanční náboj karty v Kč</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>