default/objects/Karta_CCS_Bonus__c/fields/Narozeninove_darkove_baleni__c.field-meta.xml
<CustomField>
    <fullName>Narozeninove_darkove_baleni__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Narozeninové dárkové balení.</description>
    <inlineHelpText>Narozeninové dárkové balení.</inlineHelpText>
    <label>Narozeninové dárkové balení</label>
    <type>Checkbox</type>
</CustomField>