default/objects/Karta_CCS_Bonus__c/fields/Objednavka_CCS_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Objednavka_CCS_Bonus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Karty CCS Bonus.</description>
    <inlineHelpText>Karty CCS Bonus.</inlineHelpText>
    <label>Objednávka CCS Bonus</label>
    <referenceTo>CCS_Bonus__c</referenceTo>
    <relationshipLabel>Karta CCS Bonus</relationshipLabel>
    <relationshipName>Karta_CCS_Bonus</relationshipName>
    <type>Lookup</type>
</CustomField>