default/objects/Karta_CCS_Bonus__c/fields/Pocet_karet_s_timto_nastavenim__c.field-meta.xml
<CustomField>
    <fullName>Pocet_karet_s_timto_nastavenim__c</fullName>
    <description>Počet karet s tímto nastavením.</description>
    <inlineHelpText>Počet karet s tímto nastavením.</inlineHelpText>
    <label>Počet karet s tímto nastavením</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>