default/objects/Karta_CCS_Bonus__c/fields/Vanocni_darkove_baleni__c.field-meta.xml
<CustomField>
    <fullName>Vanocni_darkove_baleni__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Vánoční dárkové balení.</description>
    <inlineHelpText>Vánoční dárkové balení.</inlineHelpText>
    <label>Vánoční dárkové balení</label>
    <type>Checkbox</type>
</CustomField>